# STM32F429ZI-Playground

./: .gitignore  .gitmodules  Cargo.toml  memory.x
.cargo/: config.toml
src/: init.rs  main.rs
