[package]
name = "rsteam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
#cortex-m = ">=0.7.4"
#cortex-m-rt = ">=0.7.1"
#panic-itm = ">=0.4.2"
#stm32f4 = ">=0.14.0"
